Refactored Server and Core to share the same file system repository / added persistence of deployment.info

--- a/Server/Views/Application/List.cshtml
+++ b/Server/Views/Application/List.cshtml
@@ -1,11 +1,12 @@
 ﻿@{
 	ViewBag.Message = "Applications";
 }
-@using Server.Domain
+
+@using Core.Persistence
 @model Server.ApplicationListModel
 <div>
 	<table class="table">
-		@foreach(Application application in Model.Applications) {
+		@foreach(FileSystemApplication application in Model.Applications) {
 			<tr>
 				<td style="width: 200px;">@application.Name</td>
 				<td style="width: 200px;">@application.Directory</td>
