--- a/Server/Views/Package/List.cshtml
+++ b/Server/Views/Package/List.cshtml
@@ -1,11 +1,11 @@
 ﻿@{
 	ViewBag.Message = "Packages";
 }
-@using Server.Domain
+@using Core.Persistence
 @model Server.PackageListModel
 <div>
 	<table class="table">
-		@foreach(Package package in Model.Packages) {
+		@foreach(FileSystemPackage package in Model.Packages) {
 			<tr>
 				<td class="text-right">@package.Version</td>
 				<td class="text-right">@package.Timestamp.ToString("dd/MM/yyyy HH:mm")</td>
